--- a/css/play.css
+++ b/css/play.css
@@ -79,7 +79,7 @@ body::before {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url('../assets/bg.png') no-repeat center center;
+  background: url('caesarCipher/assets/bg.png') no-repeat center center;
   filter: blur(3px);
   background-size: cover;
   opacity: 0.1; 
